[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/SettingsDialog.gd" type="Script" id=1]

[node name="SettingsDialog" type="AcceptDialog"]
margin_right = 600.0
margin_bottom = 400.0
popup_exclusive = true
window_title = "Settings"
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
tab_align = 0

[node name="Config" type="ScrollContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Config"]
margin_right = 576.0
margin_bottom = 390.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Config/VBoxContainer"]
margin_right = 564.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="TabContainer/Config/VBoxContainer/HBoxContainer"]
margin_top = 13.0
margin_right = 280.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Colorful (todo)"

[node name="ColorfulCheckButton" type="CheckButton" parent="TabContainer/Config/VBoxContainer/HBoxContainer"]
margin_left = 284.0
margin_right = 564.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Config/VBoxContainer"]
margin_top = 44.0
margin_right = 564.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="TabContainer/Config/VBoxContainer/HBoxContainer2"]
margin_top = 13.0
margin_right = 280.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Graph node resizable"

[node name="ResizableCheckButton" type="CheckButton" parent="TabContainer/Config/VBoxContainer/HBoxContainer2"]
margin_left = 284.0
margin_right = 564.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Config/VBoxContainer"]
margin_top = 88.0
margin_right = 564.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="TabContainer/Config/VBoxContainer/HBoxContainer3"]
margin_top = 13.0
margin_right = 280.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Show zoom label"

[node name="ShowZoomLabelCheckButton" type="CheckButton" parent="TabContainer/Config/VBoxContainer/HBoxContainer3"]
margin_left = 284.0
margin_right = 564.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="TabContainer/Config/VBoxContainer"]
margin_top = 132.0
margin_right = 564.0
margin_bottom = 172.0

[node name="Label" type="Label" parent="TabContainer/Config/VBoxContainer/HBoxContainer4"]
margin_top = 13.0
margin_right = 280.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Minimap enabled by default"

[node name="MinimapEnabledByDefaultCheckButton" type="CheckButton" parent="TabContainer/Config/VBoxContainer/HBoxContainer4"]
margin_left = 284.0
margin_right = 564.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="TabContainer/Config/VBoxContainer"]
margin_top = 176.0
margin_right = 564.0
margin_bottom = 216.0

[node name="Label" type="Label" parent="TabContainer/Config/VBoxContainer/HBoxContainer5"]
margin_top = 13.0
margin_right = 280.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Use snap by default"

[node name="UseSnapByDefaultCheckButton" type="CheckButton" parent="TabContainer/Config/VBoxContainer/HBoxContainer5"]
margin_left = 284.0
margin_right = 564.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="HBoxContainer6" type="HBoxContainer" parent="TabContainer/Config/VBoxContainer"]
margin_top = 220.0
margin_right = 564.0
margin_bottom = 244.0

[node name="Label" type="Label" parent="TabContainer/Config/VBoxContainer/HBoxContainer6"]
margin_top = 5.0
margin_right = 486.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Default snap distance"

[node name="DefaultSnapDistanceSpinBox" type="SpinBox" parent="TabContainer/Config/VBoxContainer/HBoxContainer6"]
margin_left = 490.0
margin_right = 564.0
margin_bottom = 24.0
min_value = 1.0
max_value = 1024.0
value = 1.0

[node name="HBoxContainer7" type="HBoxContainer" parent="TabContainer/Config/VBoxContainer"]
margin_top = 248.0
margin_right = 564.0
margin_bottom = 272.0

[node name="Label" type="Label" parent="TabContainer/Config/VBoxContainer/HBoxContainer7"]
margin_top = 5.0
margin_right = 486.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Zoom min"

[node name="ZoomMinSpinBox" type="SpinBox" parent="TabContainer/Config/VBoxContainer/HBoxContainer7"]
margin_left = 490.0
margin_right = 564.0
margin_bottom = 24.0
min_value = 0.001
step = 0.001
value = 0.001

[node name="HBoxContainer8" type="HBoxContainer" parent="TabContainer/Config/VBoxContainer"]
margin_top = 276.0
margin_right = 564.0
margin_bottom = 300.0

[node name="Label" type="Label" parent="TabContainer/Config/VBoxContainer/HBoxContainer8"]
margin_top = 5.0
margin_right = 486.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Zoom max"

[node name="ZoomMaxSpinBox" type="SpinBox" parent="TabContainer/Config/VBoxContainer/HBoxContainer8"]
margin_left = 490.0
margin_right = 564.0
margin_bottom = 24.0
min_value = 1.0
step = 0.001
value = 1.0

[node name="HBoxContainer9" type="HBoxContainer" parent="TabContainer/Config/VBoxContainer"]
margin_top = 304.0
margin_right = 564.0
margin_bottom = 328.0

[node name="Label" type="Label" parent="TabContainer/Config/VBoxContainer/HBoxContainer9"]
margin_top = 5.0
margin_right = 486.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Zoom step"

[node name="ZoomStepSpinBox" type="SpinBox" parent="TabContainer/Config/VBoxContainer/HBoxContainer9"]
margin_left = 490.0
margin_right = 564.0
margin_bottom = 24.0
min_value = 1.0
step = 0.001
value = 1.0

[node name="HBoxContainer10" type="HBoxContainer" parent="TabContainer/Config/VBoxContainer"]
margin_top = 332.0
margin_right = 564.0
margin_bottom = 356.0

[node name="Label" type="Label" parent="TabContainer/Config/VBoxContainer/HBoxContainer10"]
margin_top = 5.0
margin_right = 408.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Graph node min-size (x, y)"

[node name="GraphNodeMinSizeXSpinBox" type="SpinBox" parent="TabContainer/Config/VBoxContainer/HBoxContainer10"]
margin_left = 412.0
margin_right = 486.0
margin_bottom = 24.0
min_value = 2.0
max_value = 1024.0
value = 2.0

[node name="GraphNodeMinSizeYSpinBox" type="SpinBox" parent="TabContainer/Config/VBoxContainer/HBoxContainer10"]
margin_left = 490.0
margin_right = 564.0
margin_bottom = 24.0
min_value = 2.0
max_value = 1024.0
value = 2.0

[node name="HSeparator" type="HSeparator" parent="TabContainer/Config/VBoxContainer"]
margin_top = 360.0
margin_right = 564.0
margin_bottom = 364.0

[node name="HBoxContainer11" type="HBoxContainer" parent="TabContainer/Config/VBoxContainer"]
margin_top = 368.0
margin_right = 564.0
margin_bottom = 390.0

[node name="Label" type="Label" parent="TabContainer/Config/VBoxContainer/HBoxContainer11"]
margin_top = 4.0
margin_right = 280.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "Reset to default"

[node name="ResetButton" type="ToolButton" parent="TabContainer/Config/VBoxContainer/HBoxContainer11"]
margin_left = 284.0
margin_right = 564.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Reset"

[node name="Themes" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Themes"]
margin_right = 576.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Themes/VBoxContainer"]
margin_right = 576.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="TabContainer/Themes/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 286.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Theme"

[node name="ThemeOptionButton" type="OptionButton" parent="TabContainer/Themes/VBoxContainer/HBoxContainer"]
margin_left = 290.0
margin_right = 576.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Default"
items = [ "Default", null, false, 0, null, "Alien", null, false, 1, null, "Arc", null, false, 2, null, "Godot2", null, false, 3, null, "Godot3", null, false, 4, null, "Grey", null, false, 5, null, "Light", null, false, 6, null, "Solarized (Dark)", null, false, 7, null, "Solarized (Light)", null, false, 8, null ]
selected = 0

[connection signal="about_to_show" from="." to="." method="_on_SettingsDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_SettingsDialog_popup_hide"]
[connection signal="pressed" from="TabContainer/Config/VBoxContainer/HBoxContainer11/ResetButton" to="." method="_on_ResetButton_pressed"]
